# kitaplik

./: .gitignore  CMakeLists.txt
cmake/: KitaplikConfig.cmake.in
resources/: resources.qrc
scripts/: dev.sh
src/core/: pathvalidator.cpp  pathvalidator.hpp
src/core/commands/: filecommand.hpp
src/core/errors/: fileerror.hpp
src/core/operations/: fileoperations.cpp  fileoperations.hpp
src/gui/: kitaplik.cpp  kitaplik.hpp  main.cpp
src/gui/controllers/: filecontroller.hpp
src/gui/models/: filemodel.hpp  virtualfilesystemmodel.hpp
src/gui/ui/: kitaplik.ui
